[gd_scene load_steps=4 format=3 uid="uid://o4xq0q8ciqh"]

[ext_resource type="Script" uid="uid://dpuihqv4t62qb" path="res://scripts/ui.gd" id="1_nt7q6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nt7q6"]
bg_color = Color(1.2743756, 0.98768264, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x4jx1"]
bg_color = Color(0.9301288, 0.43912357, 1.1551381e-06, 1)

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nt7q6")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -148.0
offset_top = 22.0
offset_right = 148.0
offset_bottom = 84.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 296.0
offset_bottom = 61.0
alignment = 1

[node name="Label" type="Label" parent="Panel/HBoxContainer"]
layout_mode = 2
text = "Insects Captured:"

[node name="Label2" type="Label" parent="Panel/HBoxContainer"]
layout_mode = 2

[node name="Panel2" type="Panel" parent="."]
layout_mode = 1
offset_left = 1343.0
offset_top = 27.0
offset_right = 1493.0
offset_bottom = 67.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
alignment = 1

[node name="Label" type="Label" parent="Panel2/HBoxContainer"]
layout_mode = 2
text = "Gold:"

[node name="Label2" type="Label" parent="Panel2/HBoxContainer"]
layout_mode = 2

[node name="Panel3" type="Panel" parent="."]
layout_mode = 0
offset_left = 1143.0
offset_top = 27.0
offset_right = 1281.0
offset_bottom = 67.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel3"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Panel3/HBoxContainer"]
layout_mode = 2
text = "Health:"

[node name="Label2" type="Label" parent="Panel3/HBoxContainer"]
layout_mode = 2

[node name="Panel4" type="Panel" parent="."]
layout_mode = 0
offset_left = 1557.0
offset_top = 27.0
offset_right = 1695.0
offset_bottom = 67.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel4"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Panel4/HBoxContainer"]
layout_mode = 2
text = "Nets"

[node name="Label2" type="Label" parent="Panel4/HBoxContainer"]
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -27.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_nt7q6")
theme_override_styles/fill = SubResource("StyleBoxFlat_x4jx1")
